test_yuriiq/catalog/language/german/affiliate/register.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_paypal']	= 'PayPal';
$_['text_signup']	= 'Bitte füllen Sie alle notwendigen Felder im Formular aus, um ein Partnerkonto zu erstellen:';
$_['text_agree']	= 'Ich habe die <a class="fancybox" href="%s" alt="%s"><b>%s</b></a> gelesen und stimme zu.';
$_['text_account_already']	= 'Wenn Sie bereits ein Konto für diesen Shop besitzen, melden Sie sich bitte <a href="%s">hier</a> an.';
$_['text_cheque']	= 'Scheck';
$_['text_your_address']	= 'Ihre Adressdetails';
$_['text_register']	= 'Partnerkonto anlegen';
$_['text_payment']	= 'Zahlungsinformationen';
$_['text_your_details']	= 'Persönliche Angaben';
$_['text_your_password']	= 'Passwort';
$_['text_bank']	= 'Überweisung';

// error
$_['error_exists']	= 'Diese Emailadresse ist bereits registriert!';
$_['error_firstname']	= 'Vorname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_postcode']	= 'Postleitzahl muss zwischen 2 und 10 Zeichen lang sein.';
$_['error_telephone']	= 'Telefon muss zwischen 3 und 32 Zeichen lang sein!';
$_['error_address_1']	= 'Adresszeile 1 muss zwischen 3 und 128 Zeichen lang sein!';
$_['error_zone']	= 'Bitte ein Bundesland wählen!';
$_['error_agree']	= 'Sie müssen den %s Bedingungen zustimmen!';
$_['error_country']	= 'Bitte ein Land wählen!';
$_['error_password']	= 'Passwort muss zwischen 4 und 20 Zeichen lang sein!';
$_['error_email']	= 'Emailadresse ist nicht gültig!';
$_['error_confirm']	= 'Passwort und Bestätigung stimmt nicht überein!';
$_['error_city']	= 'Stadt muss zwischen 2 und 128 Zeichen lang sein!';
$_['error_lastname']	= 'Nachname muss zwischen 1 und 32 Zeichen lang sein!';

// entry
$_['entry_firstname']	= 'Vorname:';
$_['entry_password']	= 'Passwort:';
$_['entry_city']	= 'Stadt:';
$_['entry_bank_swift_code']	= 'SWIFT Code:';
$_['entry_bank_account_name']	= 'Kontoinhaber:';
$_['entry_tax']	= 'Steuernummer:';
$_['entry_email']	= 'Email:';
$_['entry_telephone']	= 'Telefon:';
$_['entry_zone']	= 'Bundesland:';
$_['entry_bank_branch_number']	= 'ABA/BSB Nummer (Zweigstellennummer):';
$_['entry_payment']	= 'Zahlungsmethode:';
$_['entry_bank_account_number']	= 'Kontonummer:';
$_['entry_fax']	= 'Fax:';
$_['entry_bank_name']	= 'Name der Bank:';
$_['entry_postcode']	= 'Postleitzahl:';
$_['entry_address_1']	= 'Adresszeile 1:';
$_['entry_address_2']	= 'Adresszeile 2:';
$_['entry_confirm']	= 'Passwort bestätigen:';
$_['entry_paypal']	= 'PayPal Email Konto:';
$_['entry_cheque']	= 'Name Scheckempfänger:';
$_['entry_website']	= 'Website:';
$_['entry_lastname']	= 'Nachname:';
$_['entry_company']	= 'Firma:';
$_['entry_country']	= 'Land:';

// heading
$_['heading_title']	= 'Partnerprogramm';
?>